# flexPTP-demo-FRDM-K64F

./: .gitmodules  CMakeLists.txt  CMakePresets.json  MK64FN1M0xxx12_flash.ld  README.md  config.cmake
Drivers/: CMakeLists.txt
Drivers/eth_custom/: CMakeLists.txt  enet_ethernetif_kinetis.c  ethernetif.h
Inc/: FreeRTOSConfig.h  flexptp_options.h  lwipopts.h
Modules/: CMakeLists.txt
Modules/flexPTP_port/: ptp_port_mk64f_lwip.h
Src/: CMakeLists.txt  board.h  cli.c  cli.h  clock_config.c  clock_config.h  cmds.c  eth_lwip.c  eth_lwip.h  main.c  syscall.c
Src/CMSIS-RTOS/: CMakeLists.txt
Src/CMSIS-RTOS/RTOS_V2/: cmsis_os2.c  freertos_os2.h
Src/standard_output/: CMakeLists.txt  standard_output.c
